// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mocks tests products mock should match snapshot 1`] = `
Array [
  Object {
    "amount_of_products_with_discount": 2,
    "cost": 3.97,
    "discount_cost": 2.5,
    "emoji": "🥛",
    "name": "Milk",
  },
  Object {
    "amount_of_products_with_discount": 3,
    "cost": 2.17,
    "discount_cost": 2,
    "emoji": "🍞",
    "name": "Bread",
  },
  Object {
    "cost": 0.99,
    "emoji": "🍌",
    "name": "Banana",
  },
  Object {
    "cost": 0.89,
    "emoji": "🍎",
    "name": "Apple",
  },
]
`;

exports[`mocks tests productsQuantity mock should match snapshot 1`] = `
Array [
  Object {
    "amount_of_products_with_discount": 2,
    "cost": 3.97,
    "discount_cost": 2.5,
    "emoji": "🥛",
    "name": "Milk",
    "quantity": 3,
  },
  Object {
    "amount_of_products_with_discount": 3,
    "cost": 2.17,
    "discount_cost": 2,
    "emoji": "🍞",
    "name": "Bread",
    "quantity": 4,
  },
  Object {
    "cost": 0.99,
    "emoji": "🍌",
    "name": "Banana",
    "quantity": 1,
  },
  Object {
    "cost": 0.89,
    "emoji": "🍎",
    "name": "Apple",
    "quantity": 1,
  },
]
`;
